@@ -1,3 +1,0 @@
-setBoundaryHeadPressure.C
-
-EXE = $(FOAM_USER_APPBIN)/setBoundaryHeadPressure
